2012-10-18  Kai Tietz  <ktietz@redhat.com>

	PR binutils/14067
	* coff-i386.c (bfd_target): Add section flag SEC_EXCLUDE.
	Allow BFD_COMPRESS and BFD_DECOMPRESS flags.
	* coff-x86_64.c: Likewise.
	* coffcode.h (DOT_ZDEBUG): New define.
	(sec_to_styp_flags): Check for .zdebug.
	(styp_to_sec_flags): Likewise.
	* coffgen.c (make_a_section): Handle .debug_* section
	compression/decompression flags.
	* cofflink.c (mark_relocs): Ignore relocations
	for a section, which isn't marked as used.
	(_bfd_coff_link_input_bfd): Add support of compressed
	debug sections.
	* compress.c (decompress_contents): Loop as long
	as there is input available and there is room for
	output.
	* bfd/pe-arm.c: Add .zdebug_ partial match entry.
	* pe-i386.c: Likewise.
	* pe-x86_64.c: Likewise.
	* peXXigen.c (_bfd_XXi_swap_aouthdr_out): Don't clear all
	data-directories as this might destroy content.

	* coff-i386.c (_bfd_generic_find_nearest_line_discriminator):
	define as coff_find_nearest_line_discriminator.
	* libcoff-in.h (coff_find_nearest_line_discriminator): New
	* libcoff.h: Regenerated.
	* coff-x86_64.c: Likewise.
	* coffgen.c (coff_find_nearest_line_discriminator): New function.
	prototype.

2012-10-16  Joel Brobecker  <brobecker@adacore.com>

	* coff64-rs6000.c (rs6000coff64_vec): Set _close_and_cleanup
	field to _bfd_archive_close_and_cleanup.
	(aix5coff64_vec): Likewise.

2012-10-16  Joel Brobecker  <brobecker@adacore.com>

	* coff-rs6000.c (rs6000coff_vec): Set _close_and_cleanup
	field to _bfd_archive_close_and_cleanup.
	(pmac_xcoff_vec): Likewise.

2012-10-16  Sofiane Naci  <sofiane.naci@arm.com>

	* elf64-aarch64.c (elf64_aarch64_tls_howto_table): Fix shift value for
	R_AARCH64_TLSIE_LD_GOTTPREL_PREL19, R_AARCH64_TLSLE_MOVW_TPREL_G2,
	R_AARCH64_TLSLE_MOVW_TPREL_G1, R_AARCH64_TLSLE_MOVW_TPREL_G1_NC,
	R_AARCH64_TLSLE_ADD_TPREL_HI12.
	(elf64_aarch64_tlsdesc_howto_table): Fix shift value for
	R_AARCH64_TLSDESC_LD64_PREL19 and R_AARCH64_TLSDESC_OFF_G1.